--- a/Kubernetes/deployment.yml
+++ b/Kubernetes/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: netflix-app
-        image: damtrongan/netflix:latest
+        image: damtrongan/devsecops-lab:latest
         ports:
         - containerPort: 80
